# edcat-flask-tailwind-antigravity

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  babel.cfg  firebase.json  main.py  package-lock.json  package.json  pyproject.toml  run_npx.bat
docs/: 04_admin_user_management.md  05_rag_agent_migration.md  journal.md  plano_de_implementacao.md  proj_phase_3.md  prompt.md  walkthrough.md
edcat_root/: __init__.py  auth.py  utils.py  views.py
edcat_root/g_calendar_agent/: __init__.py  agent.py  firestore_history.py  routes.py  services.py  tools.py
edcat_root/g_calendar_agent/templates/: calendar_agent.html  calendar_test.html
edcat_root/g_calendar_agent/tests/: debug_calendar.py  diagnose_agent.py  test_direct_booking.py  test_firestore.py  test_memory.py
edcat_root/pages/templates/: admin_home.html  base.html  chat_agent.html  index.html  login.html  user_home.html
edcat_root/rag_agent/: agent.py  routes.py
edcat_root/static/css/: input.css  output.css
edcat_root/translations/: messages.pot
edcat_root/translations/en_US/LC_MESSAGES/: messages.mo  messages.po
edcat_root/translations/pt_BR/LC_MESSAGES/: messages.mo  messages.po
edcat_root/utils/: __init__.py  env_bootstrap.py  get_google_secrets.py  helpers.py  langsmith_config.py
edcat_root/whatsapp/: routes.py  services.py
public/: index.html
tests/: test_agent.py  test_chroma.py
