[project]
name = "edcat-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.5",
    "dateparser>=1.4.0",
    "firebase-admin>=7.3.0",
    "flask>=3.1.3",
    "flask-babel>=4.0.0",
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.1",
    "google-cloud-secret-manager>=2.26.0",
    "gunicorn>=25.2.0",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "requests>=2.33.0",
    "tzlocal>=5.3.1",
]
